feat(admin): Ajout de la création de produits et du réapprovisionnement dans la gestion des stocks